Add comprehensive search service tests and normalize query handling
- expand SearchService tests for email/name queries, limits, ordering, and multi-word normalization with explicit repository call verification
- enforce client/document/overall limits and space collapsing in search logic
- maintain ingestion and embedding exception workflow and keep MAX_OVERALL_RESULTS at 15
- add README and update docker compose